Update Joachim's role as requested by him.
svn-id: r35809

--- a/AUTHORS
+++ b/AUTHORS
@@ -190,7 +190,7 @@ ScummVM Team
 
   Documentation
   -------------
-     Joachim Eberhard      - Documentation manager
+     Joachim Eberhard      - Numerous contributions to documentation
      Matthew Hoops         - Wiki editor
 
   Retired Team Members
