Patch #2553049: Remove clem's name from forum design, following his request
svn-id: r36272

--- a/AUTHORS
+++ b/AUTHORS
@@ -260,7 +260,6 @@ Other contributions
      David Jensen          - SVG logo conversion
      Jean Marc             - ScummVM logo
      Raina                 - ScummVM forum buttons
-     Clemens Steinhuber    - ScummVM forum theme
 
   Code contributions
   ------------------
@@ -330,6 +329,5 @@ Special thanks to
    is today. Feel free to drop us a line and tell us what you think, guys!
 
    Alan Bridgman, Simon Woodroffe and everyone at Adventure Soft for sharing
-   the source code of The Feeble Files and Simon the Sorcerer's Puzzle Pack
-   with us.
+   the source code of some of their games with us.
 
