--- a/NEWS
+++ b/NEWS
@@ -7,10 +7,12 @@ For a more comprehensive changelog for the latest experimental SVN code, see:
    - Added support for Discworld 2 - Missing Presumed ...!?
 
  Broken Sword 1:
-   - Dropped support for MPEG2 cutscenes.
- 
+   - Added support for the original Smacker cutscenes. 
+   - Dropped support for the now obsolete MPEG2 cutscenes.
+   
  Broken Sword 2:
-   - Dropped support for MPEG2 cutscenes.
+   - Added support for the original Smacker cutscenes. 
+   - Dropped support for the now obsolete MPEG2 cutscenes.
 
 0.13.0 (2009-02-??)
  General:
