--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,10 @@ For a more comprehensive changelog for the latest experimental SVN code, see:
    - Added support for Discworld.
    - Added support for Discworld 2 - Missing Presumed ...!?
 
+ Beneath a Steel Sky:
+   - Changed the game speed to match the original game (previously
+     it ran too fast).
+
  Broken Sword 1:
    - Added support for the original Smacker cutscenes. 
    - Dropped support for the now obsolete MPEG2 cutscenes.
