--- a/backends/platform/symbian/README
+++ b/backends/platform/symbian/README
@@ -1,9 +1,9 @@
 
  ScummVM - ScummVM ported to EPOC/SymbianOS
 
- Copyright (C) 2008 ScummVM Team
- Copyright (C) 2003-2008 Lars 'AnotherGuest' Persson
- Copyright (C) 2002008 Jurgen 'SumthinWicked' Braam
+ Copyright (C) 2009 ScummVM Team
+ Copyright (C) 2003-2009 Lars 'AnotherGuest' Persson
+ Copyright (C) 2002-2009 Jurgen 'SumthinWicked' Braam
 
  Copyright (C) 2003-2005 Andreas 'Sprawl' Karlsson
  $Id$
@@ -27,7 +27,7 @@ About ScummVM
 	The main transition to 0.8.0CVS and all relevant changes were done by Jurgen Braam.
 	Jurgen and Lars have successfully transfered all needed changes into CVS/SVN, with additional helpful tools for Symbian OS
 
-	Release version: 0.12.0
+	Release version: 0.13.0
 	* This version is only supported on Symbian OS 9 devices due to compiler constraints for older devices. (That means UIQ3 and S60V3 devices)
 	* Updated to SDL version 1.2.13 (previous version used was 1.2.2)
 	* Information about S60 devices can be found here http://wiki.scummvm.org/index.php/SymbianOS_S60
@@ -38,8 +38,8 @@ About ScummVM
 
 Games supported
 ---------------
-	The Symbian port of ScummVM supports all but Sword1 & 2 games. Some games might not run properly due to screenresolution or memory constraints.
-	Minimum free memory requirement is about 12MB to be able to start and run ScummVM, this is enough for most older games, but newer more resource hungry games, might require more.
+	The Symbian port of ScummVM supports all ScummVM games. Some games might not run properly due to screenresolution or memory constraints.
+	Minimum free memory requirement is about 16MB to be able to start and run ScummVM, this is enough for most older games, but newer more resource hungry games, might require more.
 
 Building ScummVM
 ---------------------
@@ -83,8 +83,6 @@ Building ScummVM
 	- flac, the Free Lossless Audio Codec
 	  http://flac.sourceforge.net/
 
-	- libmpeg2, a free MPEG-2 video stream decoder
-	  http://libmpeg2.sourceforge.net
 
 	Compiling ScummVM
 	-----------------
