--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+scummvm (0.13.0-1) stable; urgency=low
+
+  * Release build.
+
+ -- Pawel Kolodziejski <aquadran@scummvm.org>
+
 scummvm (0.10.0-0svn20070530) experimental; urgency=low
 
   * SVN snapshot.
