--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ ScummVM Team
        Matthew Hoops        
        Filippos Karapetis   
        Pawel Kolodziejski   
+       Walter van Niftrik   
        Kari Salminen        
        Eugene Sandulenko    
 
@@ -99,6 +100,13 @@ ScummVM Team
        Filippos Karapetis   
        Andrew Kurushin      
        Eugene Sandulenko    
+
+    SCI:
+       Paul Gilbert         
+       Filippos Karapetis   
+       Walter van Niftrik   
+       Jordi Vilalta Prat   
+       Lars Skovlund        
 
     Tinsel:
        Torbjorn Andersson   
