--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 ScummVM-Residual Team:
 **********************
-   James Brown           - Core developer. ScummVM co-lead dev
+   James Brown           - Core developer.
    Erich Hoover          - x86-64, various fixes and comments, menu support,
                            improved state support
    Pawel Kolodziejski    - Core developer. SMUSH, iMUSE implemention
