Mention Broken Sword 1 PSX in the NEWS and the README.
svn-id: r39079

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ For a more comprehensive changelog for the latest experimental SVN code, see:
  Broken Sword 1:
    - Added support for the original Smacker cutscenes. 
    - Dropped support for the now obsolete MPEG2 cutscenes.
+   - Added support for the PlayStation version.
    
  Broken Sword 2:
    - Added support for the original Smacker cutscenes. 
