Added Greg and myself to SCI engine credis
svn-id: r39179

--- a/AUTHORS
+++ b/AUTHORS
@@ -103,6 +103,7 @@ ScummVM Team
 
     SCI:
        Paul Gilbert         
+       Max Horn             
        Filippos Karapetis   
        Walter van Niftrik   
        Jordi Vilalta Prat   
@@ -110,6 +111,7 @@ ScummVM Team
 
     Tinsel:
        Torbjorn Andersson   
+       Greg Frieger         
        Paul Gilbert         
        Sven Hesse           
        Max Horn             
