Move Greg Frieger from Tinsel to SCI in credits as intended by r39179
svn-id: r39220

--- a/AUTHORS
+++ b/AUTHORS
@@ -38,6 +38,7 @@ ScummVM Team
 
     AGOS:
        Torbjorn Andersson   
+       Paul Gilbert         
        Travis Howell        
 
     BASS:
@@ -102,6 +103,7 @@ ScummVM Team
        Eugene Sandulenko    
 
     SCI:
+       Greg Frieger         
        Paul Gilbert         
        Max Horn             
        Filippos Karapetis   
@@ -111,7 +113,6 @@ ScummVM Team
 
     Tinsel:
        Torbjorn Andersson   
-       Greg Frieger         
        Paul Gilbert         
        Sven Hesse           
        Max Horn             
