Added myself to the MADE engine credits
svn-id: r39684

--- a/AUTHORS
+++ b/AUTHORS
@@ -91,6 +91,7 @@ ScummVM Team
 
     MADE:
        Benjamin Haisch      
+       Filippos Karapetis   
 
     Parallaction:
        peres                
