updated from scummvm to residual

--- a/README
+++ b/README
@@ -94,8 +94,8 @@ Caveats (in order of appearance):
 3) Sometimes the Demon Beavers get stuck on obstacles - open the 
    menu for a moment and they will correct themselves
 
-For more information, see the page on Residual at the ScummVM wiki:
-http://wiki.scummvm.org/index.php/Residual
+For more information, see the page on Residual at the wiki page:
+http://apps.sourceforge.net/mediawiki/residual
 
 Which datafiles are needed?
 ---------------------------
